# pyadi-hw-api

./: Makefile  README.md  noxfile.py  pyproject.toml
app/api/routes/: api.py  jif.py
app/core/: config.py  errors.py  events.py
app/models/: jif.py
app/tests/: test_jif.py
